[metadata]
name = picireny
description = Picireny Hierarchical Delta Debugging Framework
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Renata Hodovan, Akos Kiss
author_email = hodovan@inf.u-szeged.hu, akiss@inf.u-szeged.hu
url = https://github.com/renatahodovan/picireny
license = BSD
license_file = LICENSE.rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
platform = any

[options]
packages = find:
include_package_data = True
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires =
    antlerinator>=1!1.0.0
    antlr4-python2-runtime==4.9; python_version~="2.7"
    antlr4-python3-runtime==4.9; python_version>="3.0"
    inators
    picire==21.7
    setuptools
    typing; python_version<"3.5"

[options.entry_points]
console_scripts =
    picireny = picireny.cli:execute

[bdist_wheel]
universal = 1
