[metadata]
name = picireny
description = Picireny Hierarchical Delta Debugging Framework
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Renata Hodovan, Akos Kiss
author_email = hodovan@inf.u-szeged.hu, akiss@inf.u-szeged.hu
url = https://github.com/renatahodovan/picireny
license = BSD
license_files = LICENSE.rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Testing
platform = any

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    antlerinator>=1!3.0.0
    antlr4-python3-runtime==4.9.2
    importlib-metadata; python_version < "3.8"
    inators
    picire==21.8
    xson

[options.entry_points]
console_scripts =
    picireny = picireny.cli:execute

[build_antlr]
commands =
    antlerinator:4.9.2 picireny/antlr4/resources/ANTLRv4Lexer.g4 picireny/antlr4/resources/ANTLRv4Parser.g4 -Dlanguage=Python3 -o picireny/antlr4/parser -Xexact-output-dir -no-listener
output =
    picireny/antlr4/parser/ANTLRv4*.py
